compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_constructor_arg_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record IntWrapper { IntWrapper(innerInt: Int) }"
---
error: Invalid label name
  ┌─ /src/one/two.rakun:1:32
  │
1 │ record IntWrapper { IntWrapper(innerInt: Int) }
  │                                ^^^^^^^^ This is not a valid label name

Hint: Label names start with a lowercase letter and contain a-z, 0-9, or _.
Try: inner_int
